# pattrick

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  build.rs
.github/workflows/: dependabot-auto-approve.yml  fig.yml  release.yml  test.yml
fig_spec/: pattrick.ts
pattrick-clap/: CHANGELOG.md  Cargo.toml
pattrick-clap/src/: lib.rs
src/: args.rs  azure.rs  crud.rs  lib.rs  main.rs  model.rs  output.rs  pat.rs
src/crud/: create.rs  delete.rs  error.rs  get.rs  list.rs
src/model/: account.rs  profile.rs  release.rs  requests.rs  scope.rs  token.rs
