[package]
name = "pattrick"
version = "0.3.7"
edition = "2021"
description = "Pattrick is a command line tool for managing Personal Access Tokens (PAT) in Azure DevOps."
repository = "https://github.com/jvanbuel/pattrick"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.36", features = ["derive", "cargo"] }
tokio = { version = "^1.44.2", features = ["macros", "rt-multi-thread"] }
azure_core = "^0.23"
azure_identity = "^0.22"
azure_svc_batch = "^0.21"
url = "2.5.4"
reqwest = { version = "0.12.15", features = ["json"] }
serde = "1.0.219"
tabled = { version = "^0.18", features = ["ansi"] }
chrono = "0.4.40"
petname = "^2.0"
netrc = "0.4.1"
dirs = "6.0.0"
pattrick-clap = { version = "^0.3.4", path = "pattrick-clap" }
openssl = { version = "^0.10.72", features = ["vendored"] }
owo-colors = "4.1.0"
base64 = "0.22.1"
self_update = { version = "0.42.0", features = [
  "archive-tar",
  "compression-flate2",
] }
async-recursion = "1.1.1"
log = "0.4.27"
serde_json = "1.0.140"
env_logger = "0.11.8"
strum_macros = "0.27.1"

[build-dependencies]
clap = { version = "4.5.36", features = ["derive"] }
clap_complete = "4.5.47"
clap_complete_fig = "4.5.2"
pattrick-clap = { version = "^0.3.4", path = "pattrick-clap" }

[workspace]
# This is a path relative to the workspace root.
members = ["pattrick-clap"]

[dev-dependencies]
tokio-test = "0.4.4"
