[package]
name = "pattrick"
version = "0.3.7"
edition = "2024"
description = "Pattrick is a command line tool for managing Personal Access Tokens (PAT) in Azure DevOps."
repository = "https://github.com/jvanbuel/pattrick"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.47", features = ["derive", "cargo"] }
tokio = { version = "^1.47.1", features = ["macros", "rt-multi-thread"] }
azure_core = "^0.27"
azure_identity = "^0.28"
url = "2.5.7"
reqwest = { version = "0.12.23", features = ["json"] }
serde = "1.0.223"
tabled = { version = "^0.20", features = ["ansi"] }
chrono = { version = "0.4.42", features = ["serde"] }
petname = "^2.0"
netrc = "0.4.1"
dirs = "6.0.0"
pattrick-clap = { version = "^0.3.4", path = "pattrick-clap" }
openssl = { version = "^0.10.73", features = ["vendored"] }
owo-colors = "4.2.2"
base64 = "0.22.1"
self_update = { version = "0.42.0", features = [
  "archive-tar",
  "compression-flate2",
] }
async-recursion = "1.1.1"
log = "0.4.28"
serde_json = "1.0.145"
env_logger = "0.11.8"
strum_macros = "0.27.1"

[build-dependencies]
clap = { version = "4.5.47", features = ["derive"] }
clap_complete = "4.5.57"
clap_complete_fig = "4.5.2"
pattrick-clap = { version = "^0.3.4", path = "pattrick-clap" }

[workspace]
# This is a path relative to the workspace root.
members = ["pattrick-clap"]

[dev-dependencies]
tokio-test = "0.4.4"
