[package]
name = "pattrick"
version = "0.4.0"
edition = "2024"
description = "Pattrick is a command line tool for managing Personal Access Tokens (PAT) in Azure DevOps."
repository = "https://github.com/jvanbuel/pattrick"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.58", features = ["derive", "cargo"] }
tokio = { version = "^1.51.1", features = ["macros", "rt-multi-thread"] }
azure_core = "^0.33"
azure_identity = "^0.34"
url = "2.5.8"
reqwest = { version = "0.13.2", features = ["json", "query"] }
serde = "1.0.228"
tabled = { version = "^0.20", features = ["ansi"] }
chrono = { version = "0.4.44", features = ["serde"] }
petname = "^3.0"
netrc = "0.4.1"
dirs = "6.0.0"
pattrick-clap = { version = "^0.3.6", path = "pattrick-clap" }
openssl = { version = "^0.10.77", features = ["vendored"] }
owo-colors = "4.3.0"
base64 = "0.22.1"
self_update = { version = "0.44.0", features = [
  "archive-tar",
  "compression-flate2",
] }
async-recursion = "1.1.1"
log = "0.4.29"
serde_json = "1.0.149"
env_logger = "0.11.10"
strum_macros = "0.28.0"

[build-dependencies]
clap = { version = "4.5.58", features = ["derive"] }
clap_complete = "4.6.0"
clap_complete_fig = "4.5.2"
pattrick-clap = { version = "^0.3.6", path = "pattrick-clap" }

[workspace]
# This is a path relative to the workspace root.
members = ["pattrick-clap"]

[dev-dependencies]
tokio-test = "0.4.5"
