[package]
name = "pattrick-clap"
version = "0.3.4"
edition = "2021"
description = "Pattrick is a command line tool for managing Personal Access Tokens (PAT) in Azure DevOps."
repository = "https://github.com/jvanbuel/pattrick"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
clap-verbosity-flag = "2.2.0"
strum_macros = "0.26.1"
