[package]
name = "pattrick-clap"
version = "0.3.6"
edition = "2021"
description = "Pattrick is a command line tool for managing Personal Access Tokens (PAT) in Azure DevOps."
repository = "https://github.com/jvanbuel/pattrick"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
clap-verbosity-flag = "3.0.4"
strum_macros = "0.27.1"
